style.css
/* ... */
.price_custom h3 {
    font-size: 2rem;
    font-weight: 400;
}

.price_custom p span {
    color: var(--main-purple);
}

.price_custom a {
    text-decoration: none;
    border: 2px solid var(--main-purple);
    border-radius: 2rem;
    background-color: var(--main-purple);
    padding: 1rem 2rem;
    color: white;
    transition: all 0.5s;
}

.price_custom a:hover {
    border: solid 2px rgba(141, 91, 227, 1);
    background-color: rgba(141, 91, 227, 1);
}

/* ---------------------------------------REVIEWS SECTION---------------------------------------  */

#reviews {
    padding: 7rem 7rem;
    background: linear-gradient(350deg,var(--background-color) 50%, var(--light-background) 100%);
}

.reviews_grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 2rem;
}

.reviews_item {
    border: 2px solid var(--button);
    border-radius: 1rem;
    padding: 2rem;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    transition: all 0.5s;
    box-shadow: 3px 4px 18px -5px var(--shadow);
}

.reviews_item:hover {
    border: 2px solid var(--main-purple);
}

.reviews_item i {
    position: absolute;
    top: 1rem;
    right: 1rem;
    font-size: 4rem;
    color: var(--button);
    transition: all 0.5s;
}

.reviews_item:hover .quotes {
    color: var(--main-purple);
}

.rating i {
    color: rgba(255, 200, 0, 1);
    font-size: 1.3rem;
    position: unset;
}

.reviews_item p {
    padding-top: 1rem;
    padding-bottom: 3rem;
}

.review_info {
    border-top: 2px solid var(--button);
    display: flex;
}

.review_info p {
    padding: 0;
    margin: 0;
}

.profile_info h5 {
    color: var(--black);
}

.profile_pic {
    border: 2px solid var(--gray-text);
    border-radius: 50%;
    width: 3rem;
    height: 3rem;
    overflow: hidden;
    margin: 1rem 1rem 1rem 0rem;
}

.profile_pic img {
    width: 100%;
    object-fit: cover;
}

.profile_info {
    margin-top: 1rem;
}

/* ---------------------------------------CONTACT SECTION--------------------------------------- */

#contact {
    padding: 7rem 10rem;
    background: linear-gradient(350deg,var(--background-color) 50%, var(--light-background) 100%);
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 2rem;
}

#contact h3 {
    text-align: center;
    grid-column: 1 / -1;
}

#contact h4 {
    color: var(--black);
    font-size: 2rem;
    font-weight: 600;
}

#contact h5 {
    padding-bottom: 0.5rem;
    font-size: 0.9rem;
    color: var(--black);
}

#contact p {
    text-align: center;
    grid-column: 1 / -1;
}

.contact_form {
    grid-column: 1 / 2;
    width: 100%;
    border: 2px solid var(--button);
    border-radius: 2rem;
    padding: 2rem 0;
    background-color: var(--light-background);
}

form {
    padding: 0 2rem;
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: space-between;
}

.contact_form_detail {
    padding: 1rem 0;
}

.contact_form_detail input {
    width: 99%;
    height: 3rem;
    border: 2px solid var(--button);
    border-radius: 0.7rem;
    padding: 0;
    margin: 0;
}

.contact_form_detail select {
    width: 99%;
    height: 3rem;
    border: 2px solid var(--button);
    border-radius: 0.7rem;
    padding: 0;
    margin: 0;
}

.contact_form_detail #msg {
    height: 8rem;
    width: 99%;
    border: 2px solid var(--button);
    border-radius: 0.7rem;
    margin: 0;
}

.contact_form_detail input,
.contact_form_detail select,
.contact_form_detail textarea {
    padding: 0.5rem 1rem;
    box-sizing: border-box;
}

.contact_form button {
    border: 2px solid var(--main-purple);
    border-radius: 2rem;
    background-color: var(--main-purple);
    color: white;
    padding: 1rem 2rem;
    font-size: 1rem;
    margin: 1rem 0;
    transition: all 0.5s;
}

.contact_form button:hover {
    border: solid 2px rgba(141, 91, 227, 1);
    background-color: rgba(141, 91, 227, 1);
}

#contact .contact_form p {
    font-size: 0.9rem;
}

.contact_info {
    grid-column: 2 / 3;
    display: flex;
    flex-direction: column;
}

.contact_detail {
    border: 1px solid var(--button);
    border-radius: 2rem;
    padding: 2rem;
    margin-bottom: 1rem;
    display: flex;
    transition: all 0.5s;
}

.contact_detail:hover {
    border: 1px solid var(--main-purple);
    background-color: var(--white-to-light);
}

#contact .contact_detail i {
    font-size: 1.8rem;
    font-weight: 100;
    color: var(--main-purple);
    border: 2px solid var(--light-purple);
    border-radius: 1rem;
    background-color: var(--light-purple);
    width: fit-content;
    height: fit-content;
    padding: 0.7rem;
    margin-right: 1rem;
    transition: all 0.5s;
}

#contact .contact_detail:hover i {
    border: 2px solid var(--main-purple);
    background-color: var(--main-purple);
    color: var(--white);
}

#contact .contact_detail h5 {
    font-size: 1.2rem;
    font-weight: 500;
    padding: 0;
    margin: 0;
    color: var(--black);
}

#contact .contact_detail p, a {
    font-size: 1rem;
    padding: 0;
    margin: 0;
    text-align: left;
    transition: all 0.5s;
    text-decoration: none;
    color: var(--gray-text);
}

#contact .contact_detail a:hover {
    color: var(--main-purple);
}

#contact .contact_detail a:hover {
    color: var(--main-purple);
}

#contact .contact_detail p span {
    text-align: left;
}

#contact_map {
    width: 100%;
    height: 20rem;
    border-radius: 2rem;
    border: 1px solid var(--button);
    transition: all 0.5s;
    margin-top: 1rem;
}

#contact_map:hover {
    border: 1px solid var(--main-purple);
}

#contact_map.dark-mode .leaflet-tile {
    filter: invert(1) hue-rotate(180deg) brightness(1) contrast(0.8);
}


/* ---------------------------------------FOOTER--------------------------------------- */

footer {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    background-color: var(--main-purple);
    padding: 4rem 10rem;
}
/* ... */

